--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -172,7 +172,8 @@
                 <i role="presentation" class="fa-regular fa-window"></i>
                 <div>
                   <p class="ttle"><a href="/portal" class="dest" aria-current="page">
-                    Gestiona tus <b> solicitudes y registra<br /> tus novedades</b>  en nuestro <b> Portal Transaccional </b> 
+                    <b>Portal Transaccional:</b> gestiona tus solicitudes y registra
+                      tus novedades <b>aquí</b> 
                   </a></p>
                   
                 </div>
@@ -296,11 +297,11 @@
             Tips de ciberseguridad
           </a>
         </li>
-        <li>
+       <!-- <li>
           <a href="/suscribete" class="dest" aria-current="page">
             Manejar mi suscripción
           </a>
-        </li>
+        </li>-->
         <li>
           <a href="/educacion_financiera" class="dest" aria-current="page">
             Educacion financiera
