--- a/src/partials/gobierno/3_organos.html
+++ b/src/partials/gobierno/3_organos.html
@@ -80,7 +80,7 @@
   <ul class="g-junta">
     <li onclick="jd_modal1.showModal()">
       <img
-        src="/assets/images/junta/junta-sebastian.png"
+        src="/assets/images/junta/sebastian_rey.webp"
         alt="Sebastián Alberto Rey"
       />
       <h4>
