--- a/src/partials/guia/tab_1.html
+++ b/src/partials/guia/tab_1.html
@@ -1,122 +1,78 @@
 <div id="sobre-seguridad" class="ctab ctab0 active">
-    <section id="as__ciber_t1" class="as__section as__ciber_t1 {{bg}}">
-
-
-      <div class="as__section_wrapper" style="margin-bottom: 40px;">
-        <div class="as__section_content">
-           <div class="as__que_es_content">
-             <p class="prop_anim  text-xl">
-               <span class="text-azul-norm"><b>LUSA</b></span>, nuestra asistente virtual, está disponible para ti las 24 horas del día y los 7 días de la semana! Te ayudará a autogestionar tus solicitudes relacionadas con: <span class="text-azul-norm"><b>Colilla de Pago, Certificado de Pensión, Copia de tu Póliza y Certificado de Ingresos y Retenciones. </b></span>
-             </p>
-             <p class="text-azul-norm text-xl mt-10">
-               <b> ¡Descubre aquí más información sobre cómo comunicarte con ella!</b>
-             </p>
-           </div>
-         </div>
+  <section id="as__ciber_t1" class="as__section as__ciber_t1 {{bg}}">
+    <div class="as__section_wrapper" style="margin-bottom: 40px;">
+      <div class="as__section_content">
+        <div class="as__que_es_content">
+          <p class="prop_anim  text-xl">
+            <span class="text-azul-norm">
+              <b>LUSA</b>
+            </span>, nuestra asistente virtual, está disponible para ti las 24 horas del día y los 7 días de la semana! Te ayudará a autogestionar tus solicitudes relacionadas con: <span class="text-azul-norm">
+              <b>Colilla de Pago, Certificado de Pensión, Copia de tu Póliza y Certificado de Ingresos y Retenciones. </b>
+            </span>
+          </p>
+          <p class="text-azul-norm text-xl mt-10">
+            <b> ¡Descubre aquí más información sobre cómo comunicarte con ella!</b>
+          </p>
         </div>
-
-        
-        <section class="as__section bg-alpha-20 pb-20">
-            <div class="as__section_wrapper">
-              <!--<h3 class="as__title_section pt-10 pb-10">Videos destacados</h3>--->
-              <div class="as__section_content_full">
-                <div class="grid grid-cols-1 md:grid-cols-4 grid-auto-rows gap-8">
-                  <div class="flex flex-col gap-4">
-                    <a
-                      href="https://www.youtube.com/watch?v=TCC4ZIoSbBg"
-                      target="_blank"
-                    >
-                      <img
-                        src="/assets/images/video_5.jpg"
-                        alt="Asulado te guia"
-                        class="w-full rounded-3xl block"
-                      />
-                    </a>
-                    <p class="text-base text-azul-bold text-center text-xl">
-                      <b>Lusa</b>, llegó a WhatsApp!
-                    </p>
-                  </div>
-                  <div class="flex flex-col gap-4">
-                    <a
-                      href="https://www.youtube.com/watch?v=pXhbARCSZWo"
-                      target="_blank"
-                    >
-                      <img
-                        src="/assets/images/video_6.jpg"
-                        alt="Asulado te guia"
-                        class="w-full rounded-3xl block"
-                      />
-                    </a>
-                    <p class="text-base text-azul-bold text-center text-xl">
-                      ¿Cómo saber si estás hablando a nuestra línea oficial de WhatsApp?
-                    </p>
-                  </div>
-                  <div class="flex flex-col gap-4">
-                    <a
-                      href="https://www.youtube.com/watch?v=KMv0bezpE4A&list=PLOQZWsm0dD6gjtenXVqc6wA-aGjpm9KKP&index=4"
-                      target="_blank"
-                    >
-                      <img
-                        src="/assets/images/img_guia_1.jpg"
-                        alt="Asulado te guia"
-                        class="w-full rounded-3xl block"
-                      />
-                    </a>
-                    <p class="text-base text-azul-bold text-center text-xl">
-                      <b>Lusa</b>, nueva asistente virtual de <b>ASULADO</b>
-                    </p>
-                  </div>
-                  <div class="flex flex-col gap-4">
-                    <a
-                      href="https://www.youtube.com/watch?v=GJB7MZBPfeQ&list=PLOQZWsm0dD6gjtenXVqc6wA-aGjpm9KKP&index=3"
-                      target="_blank"
-                    >
-                      <img
-                        src="/assets/images/img_guia_2.jpg"
-                        alt="Asulado te guia"
-                        class="w-full rounded-3xl block"
-                      />
-                    </a>
-                    <p class="text-base text-azul-bold text-center text-xl">
-                      ¿Cómo chatear con <b>Lusa</b>? La asistente virtual de
-                      <b>ASULADO</b>?
-                    </p>
-                  </div>
-                  <div class="flex flex-col gap-4">
-                    <a
-                      href="https://www.youtube.com/watch?v=9LyvirRP4F8&list=PLOQZWsm0dD6gjtenXVqc6wA-aGjpm9KKP&index=2"
-                      target="_blank"
-                    >
-                      <img
-                        src="/assets/images/img_guia_3.jpg"
-                        alt="Asulado te guia"
-                        class="w-full rounded-3xl block"
-                      />
-                    </a>
-                    <p class="text-base text-azul-bold text-center text-xl">
-                      ¿Qué documentos puedo autogestionar con <b>Lusa</b>, la
-                      asistente virtual de <b>ASULADO</b>?
-                    </p>
-                  </div>
-                  <div class="flex flex-col gap-4">
-                    <a
-                      href="https://www.youtube.com/watch?v=TG0IFvz441M"
-                      target="_blank"
-                    >
-                      <img
-                        src="/assets/images/img_guia_4.jpg"
-                        alt="Asulado te guia"
-                        class="w-full rounded-3xl block"
-                      />
-                    </a>
-                    <p class="text-base text-azul-bold text-center text-xl">
-                      ¿Tienes dudas para interactuar con nuestra asistente virtual <b>Lusa</b>? <b>Te explicamos</b>
-      
-                    </p>
-                  </div>
-                </div>
-              </div>
+      </div>
+    </div>
+    <section class="as__section bg-alpha-20 pb-20">
+      <div class="as__section_wrapper">
+        <!--<h3 class="as__title_section pt-10 pb-10">Videos destacados</h3>--->
+        <div class="as__section_content_full">
+          <div class="grid grid-cols-1 md:grid-cols-4 grid-auto-rows gap-8">
+            <div class="flex flex-col gap-4">
+              <a href="https://www.youtube.com/watch?v=TG0IFvz441M" target="_blank">
+                <img src="/assets/images/img_guia_4.jpg" alt="Asulado te guia" class="w-full rounded-3xl block" />
+              </a>
+              <p class="text-base text-azul-bold text-center text-xl"> ¿Tienes dudas para interactuar con nuestra asistente virtual <b>Lusa</b>? <b>Te explicamos</b>
+              </p>
             </div>
-          </section>
+
+            <div class="flex flex-col gap-4">
+              <a href="https://www.youtube.com/watch?v=GJB7MZBPfeQ&list=PLOQZWsm0dD6gjtenXVqc6wA-aGjpm9KKP&index=3" target="_blank">
+                <img src="/assets/images/img_guia_2.jpg" alt="Asulado te guia" class="w-full rounded-3xl block" />
+              </a>
+              <p class="text-base text-azul-bold text-center text-xl"> ¿Cómo chatear con <b>Lusa</b>? La asistente virtual de <b>ASULADO</b>? </p>
+            </div>
+
+            <div class="flex flex-col gap-4">
+              <a href="https://www.youtube.com/watch?v=9LyvirRP4F8&list=PLOQZWsm0dD6gjtenXVqc6wA-aGjpm9KKP&index=2" target="_blank">
+                <img src="/assets/images/img_guia_3.jpg" alt="Asulado te guia" class="w-full rounded-3xl block" />
+              </a>
+              <p class="text-base text-azul-bold text-center text-xl"> ¿Qué documentos puedo autogestionar con <b>Lusa</b>, la asistente virtual de <b>ASULADO</b>? </p>
+            </div>
+
+            <div class="flex flex-col gap-4">
+              <a href="https://www.youtube.com/watch?v=pXhbARCSZWo" target="_blank">
+                <img src="/assets/images/video_6.jpg" alt="Asulado te guia" class="w-full rounded-3xl block" />
+              </a>
+              <p class="text-base text-azul-bold text-center text-xl"> ¿Cómo saber si estás hablando a nuestra línea oficial de WhatsApp? </p>
+            </div>
+
+            <div class="flex flex-col gap-4">
+              <a href="https://www.youtube.com/watch?v=TCC4ZIoSbBg" target="_blank">
+                <img src="/assets/images/video_5.jpg" alt="Asulado te guia" class="w-full rounded-3xl block" />
+              </a>
+              <p class="text-base text-azul-bold text-center text-xl">
+                <b>Lusa</b>, llegó a WhatsApp!
+              </p>
+            </div>
+            
+            <div class="flex flex-col gap-4">
+              <a href="https://www.youtube.com/watch?v=KMv0bezpE4A&list=PLOQZWsm0dD6gjtenXVqc6wA-aGjpm9KKP&index=4" target="_blank">
+                <img src="/assets/images/img_guia_1.jpg" alt="Asulado te guia" class="w-full rounded-3xl block" />
+              </a>
+              <p class="text-base text-azul-bold text-center text-xl">
+                <b>Lusa</b>, nueva asistente virtual de <b>ASULADO</b>
+              </p>
+            </div>
+            
+            
+           
+          </div>
+        </div>
+      </div>
     </section>
+  </section>
 </div>
