--- a/src/partials/renta_vitalicia/que_es.html
+++ b/src/partials/renta_vitalicia/que_es.html
@@ -75,17 +75,21 @@
   </div>
 </section>
 
-<section id="" class="as__section as__que_es {{bg}}">
+<section id="" class="as__section  {{bg}}">
   <div class="as__section_wrapper">
     <div class="as__section_content">
-      <h3 class="as__title_section">Conoce más sobre nuestros productos:</h3>
+    
+      <h3 class="extra_title prop_anim">
+        <span>Conoce más</span> <b>sobre nuestros productos:</b>
+      </h3>
+
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mt-10">
         <!-- Primera columna -->
         <div class="p-6 rounded-lg">
           <a
           href="/assets/documentos/vitalicia-min.pdf"
           target="_blank"
-          class="as__button prop_anim !ml-0 !mr-auto w-auto" style="font-size: 1.3em; font-weight: 700;"
+          class="as__button prop_anim !ml-0 !mr-auto w-auto" style="font-size: 1.5em; font-weight: 700;"
         >
           <span>RENTA VITALICIA</span>
           <i role="presentation" class="fa-light fa-arrow-right"></i>
@@ -97,7 +101,7 @@
           <a
           href="/assets/documentos/previsional-min.pdf"
           target="_blank"
-          class="as__button prop_anim !ml-0 !mr-auto"  style="font-size: 1.3em; font-weight: 700;"
+          class="as__button prop_anim !ml-0 !mr-auto"  style="font-size: 1.5em; font-weight: 700;"
         >
           <span>SEGURO PREVISIONAL</span>
           <i role="presentation" class="fa-light fa-arrow-right"></i>
