--- a/src/partials/renta_vitalicia/que_es.html
+++ b/src/partials/renta_vitalicia/que_es.html
@@ -75,12 +75,13 @@
   </div>
 </section>
 
-<section id="" class="as__section  {{bg}}">
+<section id="" class="as__section as__que_es  {{bg}} as__bg_sky_multy">
   <div class="as__section_wrapper">
     <div class="as__section_content">
+      
     
-      <h3 class="extra_title prop_anim">
-        <span>Conoce más</span> <b>sobre nuestros productos:</b>
+      <h3 class="extra_title prop_anim" style="text-align: center;">
+        <span class="!text-azul-40" style="margin: 10px 0px;">Conoce más</span>sobre nuestros productos:
       </h3>
 
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mt-10">
