--- a/src/partials/renta_vitalicia/que_es.html
+++ b/src/partials/renta_vitalicia/que_es.html
@@ -75,14 +75,13 @@
   </div>
 </section>
 
-<section id="" class="as__section as__que_es  {{bg}} as__bg_sky_multy">
+<section id="" class="as__section as__que_es as__bg_sky_multy bg-[#0f3c84] pt-16 pb-24 bg-bg">
   <div class="as__section_wrapper">
     <div class="as__section_content">
-      
-    
-      <h3 class="extra_title prop_anim" style="text-align: center;">
-        <span class="!text-azul-40" style="margin: 10px 0px;">Conoce más</span>sobre nuestros productos:
+      <h3 class="extra_title prop_anim" style="font-size: 2rem;">
+        <span style="color:#fff">Conoce más</span> <b>sobre nuestros productos:</b>
       </h3>
+
 
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mt-10">
         <!-- Primera columna -->
