--- a/src/partials/home/banners.html
+++ b/src/partials/home/banners.html
@@ -3,7 +3,50 @@
     <div class="as__banner_wrapper_int">
 
 
-      <div class="banner banner_1 b_revese  active">
+      <div class="banner banner_1 active">
+        <img  src="/assets/images/Logo-Navidada-Azul.png" style="position: absolute; width: 250px; top: 6%; right: 0;"/>
+        <!--  <img  src="/assets/images/MANO.png" style="position: absolute; width: 250px; bottom: 0%; right: -10%; z-index: 999;"/>-->
+        <div class="as__banner_content full">
+          
+          <h1 class="!leading-none">
+            <span class="!inline w-auto ban_anim1 !text-azul-norm text-2xl md:text-4xl" style="font-weight: 700;">Acompañarte, es nuestra mayor 
+               </span> <br />
+            <span class="!inline w-auto ban_anim1 !text-azul-norm text-2xl md:text-4xl" style="font-weight: 700;">inspiración para seguir creciendo </span><br />
+          
+           
+        
+          </h1>
+          <div>
+            <p class="ban_anim1 text-4xl md:text-4xl">
+            <b>¡gracias por vivir un año más junto a nosotros!</b>  
+            </p>
+            
+
+            <!-- <button onclick="startChat()" class="as__button self-start">
+              <span>¡Escríbeme!</span>
+              <i
+                role="presentation"
+                class="fa-light fa-arrow-right"
+                aria-hidden="true"
+              ></i>
+            </button> -->
+          </div>
+
+    
+        </div>
+        <div class="as__banner_images">
+          <!--<img src="/assets/images/banner_2_bg.webp" alt="Asulado" />-->
+          <img
+            src="/assets/images/familia_2.webp"
+            class="max-w-[800px]"
+            alt="Asulado"
+          />
+        </div>
+        <div class="as__banner_piso"></div>
+      </div>
+
+
+      <div class="banner banner_1 b_revese  ">
         <div class="as__banner_content full">
           <img
             src="/assets/images/txt_nuevo.svg"
