--- a/src/partials/home/banners.html
+++ b/src/partials/home/banners.html
@@ -20,6 +20,13 @@
             <p class="ban_anim1 text-4xl md:text-4xl">
             <b>¡gracias por vivir un año más junto a nosotros!</b>  
             </p>
+            <img
+            src="/assets/images/2nos.png"
+            class="max-w-[300px]"
+            alt="Asulado"
+          />
+
+
             
 
             <!-- <button onclick="startChat()" class="as__button self-start">
