--- a/src/partials/home/banners.html
+++ b/src/partials/home/banners.html
@@ -46,15 +46,15 @@
         <div class="as__banner_piso"></div>
       </div> -->
       <div class="banner banner_1 active">
-        <div class="as__banner_content full">
-          <h1 class="t2">
-            ¡Aumento del
+        <div class="as__banner_content full md:-ml-4">
+          <h1 class="t2 ">
+            ¡Aumento del<br>
             <b class="!inline-block">Salario Mínimo</b> para 2025!
           </h1>
-          <div>
+          <div class="innerp">
             <p class="t1">
-              Si para 2024 el valor de la mesada en la póliza era de $1,300,000,
-              para 2025 será de <b>$1,423.500</b>
+              Si para 2024 el valor de la mesada <b>en la póliza</b> era de
+              $1,300,000, para 2025 será de <b>$1,423.500</b>
             </p>
             <p class="t2">
               ¡Recuerda! En Colombia ninguna mesada puede ser inferior al
@@ -70,7 +70,7 @@
         <div class="as__banner_images">
           <img
             src="/assets/images/banner-salario.webp"
-            class="max-w-[750px]"
+            class="!max-w-[820px]"
             alt="Asulado"
           />
         </div>
