--- a/src/partials/home/banners.html
+++ b/src/partials/home/banners.html
@@ -47,9 +47,9 @@
       </div> -->
       <div class="banner banner_1 active">
         <div class="as__banner_content full md:-ml-4">
-          <h1 class="t2 ">
-            ¡Aumento del<br>
-            <b class="!inline-block">Salario Mínimo</b> para 2025!
+          <h1 class="t2">¡Aumento del
+            <strong > Salario Mínimo</strong> <br />para
+            2025!
           </h1>
           <div class="innerp">
             <p class="t1">
