--- a/src/partials/home/banners.html
+++ b/src/partials/home/banners.html
@@ -47,14 +47,15 @@
       </div> -->
       <div class="banner banner_1 active">
         <div class="as__banner_content full md:-ml-4">
-          <h1 class="t2">¡Aumento del
-            <strong > Salario Mínimo</strong> <br />para
-            2025!
+          <h1 class="t2">
+            <span>¡Aumento del</span>
+            <strong> Salario Mínimo</strong>
+            <span>para 2025!</span>
           </h1>
           <div class="innerp">
             <p class="t1">
               Si para 2024 el valor de la mesada <b>en la póliza</b> era de
-              $1,300,000, para 2025 será de <b>$1,423.500</b>
+              $1.300.000, para 2025 será de <b>$1.423.500</b>
             </p>
             <p class="t2">
               ¡Recuerda! En Colombia ninguna mesada puede ser inferior al
