--- a/src/partials/home/banners.html
+++ b/src/partials/home/banners.html
@@ -1930,3 +1930,203 @@
     <ul class="as__banner_controls_dots"></ul>
   </div>
 </section>
+<style>
+  .as__banner_content {
+    align-self: center;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    grid-column: span 6 / span 6;
+    grid-column-start: 2;
+    grid-row: span 3 / span 3;
+    grid-row-start: 4;
+    z-index: 20;
+  }
+  @media (min-width: 768px) {
+    .as__banner_content {
+      grid-column-end: 8;
+      grid-column-start: 5;
+      grid-row-end: 6;
+      grid-row-start: 2;
+    }
+    .as__banner_content.full {
+      grid-column-end: 9;
+    }
+  }
+  .as__banner_content h1 {
+    font-family: var(--font-je), "Sora", sans-serif;
+    font-size: 3rem;
+    line-height: 1;
+    line-height: 0.8em;
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 3rem;
+    position: relative;
+  }
+  @media (min-width: 768px) {
+    .as__banner_content h1 {
+      margin-left: 0;
+      margin-right: 0;
+      padding-right: 0;
+    }
+  }
+  .as__banner_content h1 span {
+    --tw-text-opacity: 1;
+    color: rgb(24 37 78 / var(--tw-text-opacity));
+    display: block;
+    position: relative;
+    z-index: 10;
+  }
+  .as__banner_content h1 b {
+    --tw-bg-opacity: 1;
+    --tw-text-opacity: 1;
+    background-color: rgb(211 235 241 / var(--tw-bg-opacity));
+    border-radius: 9999px;
+    color: rgb(39 82 176 / var(--tw-text-opacity));
+    display: inline-block;
+    font-weight: 400;
+    margin-left: 2rem;
+    padding: 0.5rem 1.5rem 0.25rem;
+    z-index: 0;
+  }
+  .as__banner_content h1 b,
+  .as__banner_content h1.t2 {
+    position: relative;
+  }
+  .as__banner_content h1.t2 {
+    font-family: var(--font-je), "Sora", sans-serif;
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+    line-height: 1;
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 3rem;
+  }
+  @media (min-width: 768px) {
+    .as__banner_content h1.t2 {
+      margin-left: 0;
+      margin-right: 1.75rem;
+      padding-right: 0;
+    }
+  }
+  .as__banner_content h1.t2 span {
+    display: inline-block;
+  }
+  .as__banner_content h1.t2 b {
+    --tw-text-opacity: 1;
+    background-image: none;
+    display: inline;
+    font-weight: 700;
+  }
+  .as__banner_content h1.t2 b,
+  .as__banner_content h1.t2 strong {
+    color: rgb(39 82 176 / var(--tw-text-opacity));
+  }
+  .as__banner_content h1.t2 strong {
+    --tw-bg-opacity: 1;
+    --tw-text-opacity: 1;
+    background-color: rgb(211 235 241 / var(--tw-bg-opacity));
+    border-radius: 9999px;
+    display: inline-block;
+    font-weight: 400;
+    margin-left: 0;
+    margin-right: 0;
+    padding: 0.5rem 1.5rem 0.25rem;
+    position: relative;
+    z-index: 0;
+  }
+  .as__banner_content div.innerp {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  @media (min-width: 768px) {
+    .as__banner_content div.innerp {
+      margin-left: 3rem;
+      margin-right: 6rem;
+    }
+  }
+  .as__banner_content div.innerp p {
+    --tw-text-opacity: 1;
+    color: rgb(24 37 78 / var(--tw-text-opacity));
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+    line-height: 1.25;
+    text-align: center;
+  }
+  @media (min-width: 768px) {
+    .as__banner_content div.innerp p {
+      text-align: left;
+    }
+  }
+  .as__banner_content div.innerp p.dest {
+    --tw-text-opacity: 1;
+    color: rgb(39 82 176 / var(--tw-text-opacity));
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+  .as__banner_content div.innerp p.t1 {
+    --tw-text-opacity: 1;
+    color: rgb(24 37 78 / var(--tw-text-opacity));
+    font-size: 1.5rem;
+    line-height: 2rem;
+    line-height: 1.25;
+    text-align: center;
+  }
+  @media (min-width: 768px) {
+    .as__banner_content div.innerp p.t1 {
+      margin-right: 1rem;
+      text-align: left;
+    }
+  }
+  .as__banner_content div.innerp p.t1.dest {
+    color: rgb(39 82 176 / var(--tw-text-opacity));
+  }
+  .as__banner_content div.innerp p.t1.dest,
+  .as__banner_content div.innerp p.t2 {
+    --tw-text-opacity: 1;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+  .as__banner_content div.innerp p.t2 {
+    color: rgb(46 82 250 / var(--tw-text-opacity));
+    font-weight: 700;
+    line-height: 1.25;
+    text-align: center;
+  }
+  @media (min-width: 768px) {
+    .as__banner_content div.innerp p.t2 {
+      text-align: left;
+    }
+  }
+  .as__banner_content div.innerp p.t2.dest {
+    --tw-text-opacity: 1;
+    color: rgb(39 82 176 / var(--tw-text-opacity));
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+  .as__banner_content div.innerp p.t3 {
+    --tw-text-opacity: 1;
+    color: rgb(24 37 78 / var(--tw-text-opacity));
+    font-size: 1rem;
+    line-height: 1.5rem;
+    line-height: 1.25;
+    text-align: center;
+  }
+  @media (min-width: 768px) {
+    .as__banner_content div.innerp p.t3 {
+      text-align: left;
+    }
+  }
+  .as__banner_content div.innerp p.t3.dest {
+    --tw-text-opacity: 1;
+    color: rgb(39 82 176 / var(--tw-text-opacity));
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+  @media (min-width: 768px) {
+    .as__banner_content div.innerp a {
+      margin-right: auto;
+    }
+  }
+</style>
