--- a/src/partials/home/banners.html
+++ b/src/partials/home/banners.html
@@ -46,7 +46,7 @@
         <div class="as__banner_piso"></div>
       </div> -->
       <div class="banner banner_1 active">
-        <div class="as__banner_content full -mt-24 md:mt-0 md:-ml-4">
+        <div class="as__banner_content full -mt-24 md:mt-0 md:-ml-4 !gap-2 !md:gap-4">
           <h1 class="t2">
             <span>¡Aumento del</span>
             <strong> Salario Mínimo</strong>
@@ -68,7 +68,7 @@
             </p>
           </div>
         </div>
-        <div class="as__banner_images">
+        <div class="as__banner_images -mt-24 md:mt-0">
           <!-- <img
             src="/assets/images/banner-salario.webp"
             class="!max-w-[820px]"
