--- a/src/partials/gobierno/2_pol_corp.html
+++ b/src/partials/gobierno/2_pol_corp.html
@@ -162,6 +162,22 @@
           <i class="itc fa-light fa-cloud-arrow-down"></i>
         </a>
       </li>
+      <li class="as__desc_item">
+        <a
+          href="/assets/documentos/Politica_inversion_sostenible_Asulado.pdf"
+          target="_blank"
+          class="dest"
+          aria-current="page"
+        >
+          <div>
+            <b
+              > Política inversión sostenible</b
+            >
+            <span> PDF 306 kb </span>
+          </div>
+          <i class="itc fa-light fa-cloud-arrow-down"></i>
+        </a>
+      </li>
     </ul>
   </div>
 </div>
