Hide year neighbor elements in calendar and update holiday list for 2025

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -2394,6 +2394,10 @@ body {
     .next {
       @apply hidden;
     }
+    .year-neighbor2,
+    .year-neighbor {
+      @apply hidden;
+    }
   }
   .months-container {
     @apply bg-azul-light rounded-b-xl p-8 gap-y-4;
