--- a/src/css/portal.css
+++ b/src/css/portal.css
@@ -1602,6 +1602,10 @@ body {
     .next {
       @apply hidden;
     }
+    .year-neighbor2,
+    .year-neighbor {
+      @apply hidden;
+    }
   }
   .months-container {
     @apply bg-azul-light rounded-b-xl p-8 gap-y-4;
