--- a/src/partials/gobierno/2_pol_corp.html
+++ b/src/partials/gobierno/2_pol_corp.html
@@ -162,6 +162,24 @@
           <i class="itc fa-light fa-cloud-arrow-down"></i>
         </a>
       </li>
+
+      <li class="as__desc_item">
+        <a
+          href="https://d2d3tju83rs4vu.cloudfront.net/assets/documentos/GLC-PO06%20Reglamento%20del%20Comite%20de%20etica%20y%20Cumplimiento.pdf"
+          target="_blank"
+          class="dest"
+          aria-current="page"
+        >
+          <div>
+            <b
+              > Reglamento comité de ética</b
+            >
+            <span> PDF 188 kb </span>
+          </div>
+          <i class="itc fa-light fa-cloud-arrow-down"></i>
+        </a>
+      </li>
+
       <li class="as__desc_item">
         <a
           href="/assets/documentos/Politica_inversion_sostenible_Asulado.pdf"
@@ -178,6 +196,41 @@
           <i class="itc fa-light fa-cloud-arrow-down"></i>
         </a>
       </li>
+
+      <li class="as__desc_item">
+        <a
+          href="/assets/documentos/Politica_de_Seguridad_y_Salud_en_el_Trabajo.pdf"
+          target="_blank"
+          class="dest"
+          aria-current="page"
+        >
+          <div>
+            <b
+              > Política de seguridad y salud en el trabajo</b
+            >
+            <span> PDF 174 kb </span>
+          </div>
+          <i class="itc fa-light fa-cloud-arrow-down"></i>
+        </a>
+      </li>
+
+      <li class="as__desc_item">
+        <a
+          href="/assets/documentos/Protocolo_prevencion_y_atencion_del_acoso_sexual _laboral.pdf"
+          target="_blank"
+          class="dest"
+          aria-current="page"
+        >
+          <div>
+            <b
+              > Protocolo para la prevención y atención del acoso sexual laboral</b
+            >
+            <span> PDF 280 kb </span>
+          </div>
+          <i class="itc fa-light fa-cloud-arrow-down"></i>
+        </a>
+      </li>
+
     </ul>
   </div>
 </div>
